@@ -5,6 +5,10 @@
 * Removed 'Open in terminal' from context menu on folder on the desktop
     that cannot be opened in terminal.
 
+* Fixed invalid unref on CSS provider (GTK+ 3.0).
+
+* Fixed unwanted unselection of items when right-clicked the desktop.
+
 
 Changes on 1.2.4 since 1.2.3:
 
